[gd_scene load_steps=9 format=2]

[ext_resource path="res://map/map.gd" type="Script" id=1]
[ext_resource path="res://assets/thresh.tres" type="Material" id=2]
[ext_resource path="res://assets/gfx/grass.png" type="Texture" id=3]
[ext_resource path="res://assets/gfx/ska.png" type="Texture" id=4]
[ext_resource path="res://assets/gfx/space.png" type="Texture" id=5]
[ext_resource path="res://assets/gfx/grid.png" type="Texture" id=6]
[ext_resource path="res://text/dynamic_text.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="MapTexture" type="Sprite" parent="."]
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 3 )
centered = false

[node name="SpaceOverlay" type="Sprite" parent="MapTexture"]
visible = false
material = SubResource( 1 )
position = Vector2( 640, 360 )
scale = Vector2( 2.063, 2.063 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 280, 0, 720, 720 )

[node name="JungleOverlay1" type="Sprite" parent="MapTexture"]
visible = false
material = SubResource( 1 )
position = Vector2( 512, 288 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 6 )
flip_h = true
region_enabled = true
region_rect = Rect2( 280, 0, 720, 720 )

[node name="JungleOverlay2" type="Sprite" parent="MapTexture"]
visible = false
material = SubResource( 1 )
position = Vector2( 384, 216 )
scale = Vector2( 3.3, 3.3 )
texture = ExtResource( 6 )
flip_v = true
region_enabled = true
region_rect = Rect2( 280, 0, 720, 720 )

[node name="Thresh" type="Sprite" parent="MapTexture"]
visible = false
material = ExtResource( 2 )
texture = ExtResource( 4 )
centered = false

[node name="Text1" type="Node2D" parent="."]
position = Vector2( 1024, 426 )
script = ExtResource( 7 )
size = 50.0
justify = 2

[node name="Text2" type="Node2D" parent="."]
position = Vector2( 1024, 726 )
script = ExtResource( 7 )
size = 50.0
justify = 2
